--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^5.8.3",
     "react": "^16.3.1",
     "react-native": "^0.55.4",
+    "react-native-action-button": "^2.8.5",
     "react-native-animate-loading-button": "^1.0.3",
     "react-native-elements": "^1.0.0",
     "react-native-grid-component": "^1.1.0",
