--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-animate-loading-button": "^1.0.3",
     "react-native-elements": "^1.0.0",
     "react-native-grid-component": "^1.1.0",
+    "react-native-icon-badge": "^1.1.3",
     "react-native-maps": "^0.21.0",
     "react-native-picker-select": "^5.2.4",
     "react-native-router-flux": "^4.0.1",
@@ -43,6 +44,7 @@
     "react-native-vector-icons": "^6.2.0",
     "react-redux": "^5.0.7",
     "react-thunk": "^1.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rn-placeholder": "^2.0.0"
   }
 }
