--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "SKIOTES",
-  "version": "0.0.1",
+  "name": "SkiotesPLUS",
+  "version": "0.0.2",
   "private": true,
   "devDependencies": {
     "react-native-scripts": "1.14.0",
