3 commit mokap dasbord psikotest tambah bardcode scan

--- a/.babelrc
+++ b/.babelrc
@@ -18,6 +18,7 @@
         "@dasbord": "./src/dasbord",
         "@api": "./src/api",     	        	
         "@kantor": "./src/kantor", 	
+        "@setting": "./src/setting",   
   		 }
   	   }
   	 ]
